# amos-utils

./: .gitignore  pyproject.toml
amosutils/catalogue/: catalogue.py
amosutils/physics/: airmass.py  atmosphere.py  constants.py
amosutils/projections/: shifters.py
amosutils/trajectory/: ray.py
tests/: test_catalogue.py  test_projections.py  test_shifters.py  test_zenith.py
tests/atmosphere/: test_atmosphere.py
tests/catalogue/: test_catalogue.py
tests/projections/: test_projections.py  test_shifters.py  test_transformers.py  test_zenith.py
tests/trajectory/: test_trajectory.py
